@@ -1013,6 +1013,19 @@ int attribute_hidden Rstd_ReadConsole(const char *prompt, unsigned char *buf, in
                 // introduced in readline 4.0: only used for >= 6.3
 #ifdef HAVE_RL_RESIZE_TERMINAL
                 rl_resize_terminal();
+                static int oldwidth;
+                int height, width;
+                rl_get_screen_size(&height, &width);
+                if (oldwidth >= 0 && oldwidth != width)
+                {
+                    static SEXP opsym = NULL;
+                    if (!opsym)
+                        opsym = install("setWidthOnResize");
+                    Rboolean setOK = asLogical(GetOption1(opsym));
+                    oldwidth = width;
+                    if (setOK != NA_LOGICAL && setOK)
+                        R_SetOptionWidth(width);
+                }
 #endif
             }
 #endif
